Ajustar accesos al retiro de remanentes

--- a/finances/templates/finances/annual_flow_detail.html
+++ b/finances/templates/finances/annual_flow_detail.html
@@ -74,6 +74,12 @@
                 </div>
                 <i class="fas fa-coins text-3xl text-warning"></i>
             </div>
+            <div class="mt-4">
+                <a href="{% url 'finances:flow-remnants' flow.pk %}"
+                   class="block w-full bg-primary hover:bg-primary-dark text-white text-center py-2 px-3 rounded text-sm transition">
+                    <i class="fas fa-list mr-1"></i>Ver remanentes
+                </a>
+            </div>
         </div>
     </div>
 
