Add info color to Tailwind config

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
                         'primary-dark': '#023047',
                         'primary': '#219EBC',
                         'primary-light': '#8ECAE6',
+                        'info': '#0284C7',
                         'warning': '#FFB703',
                         'danger': '#FB8500',
                     }
