correcion en dashboard

--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center space-x-4">
                     <a href="{% url 'dashboard' %}" class="text-white text-xl font-bold hover:text-primary-light transition">
-                        <i class="fas fa-chart-line mr-2"></i>Control Financiero
+                        <i class="fa-solid fa-gamepad"></i> Control Life
                     </a>
                 </div>
                 
