Add Linux commands management app

--- a/templates/base.html
+++ b/templates/base.html
@@ -77,6 +77,9 @@
                     <a href="{% url 'dashboard' %}" class="text-white hover:text-primary-light transition">
                         <i class="fas fa-home"></i> Dashboard
                     </a>
+                    <a href="{% url 'linux_commands:list' %}" class="text-white hover:text-primary-light transition">
+                        <i class="fas fa-terminal"></i> Comandos Linux
+                    </a>
                     <a href="{% url 'admin:index' %}" class="text-white hover:text-primary-light transition">
                         <i class="fas fa-cog"></i> Admin Panel
                     </a>
