--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
                         'primary-dark': '#023047',
                         'primary': '#219EBC',
                         'primary-light': '#8ECAE6',
+                        'secondary': '#8B5CF6',
                         'info': '#0284C7',
                         'warning': '#FFB703',
                         'danger': '#FB8500',
@@ -76,9 +77,6 @@
                 <div class="flex items-center space-x-6">
                     <a href="{% url 'dashboard' %}" class="text-white hover:text-primary-light transition">
                         <i class="fas fa-home"></i> Dashboard
-                    </a>
-                    <a href="{% url 'linux_commands:list' %}" class="text-white hover:text-primary-light transition">
-                        <i class="fas fa-terminal"></i> Comandos Linux
                     </a>
                     <a href="{% url 'admin:index' %}" class="text-white hover:text-primary-light transition">
                         <i class="fas fa-cog"></i> Admin Panel
